Prevent display from overflowing

--- a/style.css
+++ b/style.css
@@ -43,6 +43,7 @@ p{
 }
 
 #display{
+    overflow: hidden;
     margin-top: 48px;
     background: linear-gradient(
         to bottom,
